anv: ensure i915 submission of binary semaphores before QueueSubmit returns

The delayed submission, due to the submission thread, can lead to a
syncobj semaphore used both for wait and signal operations to be reset
before the submission thread has sent the syncobj to i915.

This leads to a failure in i915 because we're passing an empty syncobj
to wait on.

v2: Fix up error cases (Lionel)
    Document things better (Lionel)

v3: Drop unnecessary syncobj reset (Lionel)

Signed-off-by: Lionel Landwerlin <lionel.g.landwerlin@intel.com>
Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/4945
Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/5177
Fixes: 829699ba632b ("anv: implement shareable timeline semaphores")